tests/fixtures/invalid/char_function_empty_return.c
char bad() {
    return;
}

int main() {
    return bad();
}
